--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,12 @@
 {
     "name": "ac-systems/keycloak-php-sdk",
     "description": "PHP wrapper for the KeyCloak admin API",
-    "keywords": ["keycloak", "sdk", "admin", "identity server"],
+    "keywords": [
+        "keycloak",
+        "sdk",
+        "admin",
+        "identity server"
+    ],
     "type": "library",
     "license": "MIT",
     "authors": [
@@ -16,6 +21,12 @@
         "ext-json": "*",
         "guzzlehttp/guzzle": "^5.3|^6.3",
         "league/oauth2-client": "^2.4"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^7.5"
+    },
+    "scripts": {
+        "test": "./vendor/bin/phpunit --bootstrap vendor/autoload.php --testdox tests"
     },
     "autoload": {
         "psr-4": {
