--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
         "league/oauth2-client": "^2.4"
     },
     "require-dev": {
-        "phpunit/phpunit": "^7.5"
+        "phpunit/phpunit": "^7.5",
+        "symfony/dotenv": "^4.3"
     },
     "scripts": {
         "test": "./vendor/bin/phpunit --bootstrap vendor/autoload.php --testdox tests"
