--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "acsystems/keycloak-php-sdk",
+    "name": "tvtsea/keycloak",
     "description": "PHP wrapper for the KeyCloak admin API",
     "keywords": [
         "keycloak",
